# sovereign-sentinel-ai

./: .gitignore  README.md  report.html  requirements.txt  rules.json  scanner_engine.py  security_report.json  sentinel_core.py
.github/workflows/: security.yml
api-gateway/app/: .main.py.swp  ai_brain.py  defender.py  main.py  process_github_code  security_scanner.py
api-gateway/app/graph_engine/: db_connector.py  orchestrator.py
core-engine/: CMakeLists.txt  scanner  scanner.cpp
core-engine/include/: parser.hpp
core-engine/src/: main.cpp  parser.cpp
samples/: vulnerable.cpp
test/: vuln.cpp
tests/: test_scanner.py
